<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- Photo by Sandro Schuh on Unsplash: https://unsplash.com/photos/HgwY_YQ1m0w -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grass">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context="com.example.android.scorekeeper.MainActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamName"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/Score"
                    android:fontFamily="sans-serif-light"
                    android:freezesText="true"
                    android:text="0" />

                <Button
                    style="@style/ScoreButton"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:onClick="addSixForTeamA"
                    android:text="@string/touchdown_button" />

                <Button
                    style="@style/ScoreButton"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/field_goal_button" />

                <Button
                    style="@style/ScoreButton"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/safety_conversion_button" />

                <Button
                    style="@style/ScoreButton"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:onClick="addOneForTeamA"
                    android:text="@string/extra_point_button" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamName"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/Score"
                    android:fontFamily="sans-serif-light"
                    android:freezesText="true"
                    android:text="0" />

                <Button
                    style="@style/ScoreButton"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:onClick="addSixForTeamB"
                    android:text="@string/touchdown_button" />

                <Button
                    style="@style/ScoreButton"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/field_goal_button" />

                <Button
                    style="@style/ScoreButton"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/safety_conversion_button" />

                <Button
                    style="@style/ScoreButton"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:onClick="addOneForTeamB"
                    android:text="@string/extra_point_button" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_button"
            style="@style/ResetButton"
            android:layout_below="@id/linear_layout"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="resetScore"
            android:text="@string/reset_button" />
    </RelativeLayout>
</ScrollView>